	    in given file is read every time this beacon entry is
	    executed, and the text is sent out sans line end LF.
	    There are no quote processing available.
	.
	    Validate latitude and longitude input, and complain if
	    validate failed.
	.
	    Beacon timefixing on all message types that support it,
	    and only upon special "timefix" option set on the beacon.

	* config.c:
	    Make config parser debugging needs  -ddd  runtime options.

	* telemetry.c:
	    Report higher of 10 minute integrated packet/byte counts in
	    the 20 minute account interval.  This makes graphs smoother.

2009-10-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, aprx.c, aprsis.c, beacon.c, netax25.c, ttyreader.c,
	  erlang.c, aprx-stat.c, igate.c:
	    Modify the printtime() to print millisecond resolution times.

2009-10-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c, config.c, aprx.h, aprx.conf.in, aprx-complex.conf.in,
	  aprx.8.in:
	    Added a 'beaconmode { aprsis | both | radio }' config option,
	    which says where the beacons are sent to.

	* ROADMAP
	    Development roadmap for first digit of version number

2009-10-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* digipeater.c, beacon.c, interface.c, aprx.h:
	    Put all beacons on digipeater's transmitter duplicate checker
	    storage.  Now a beacon with WIDE2-2 path will not be repeated
	    by message originator.  Re-organized beacon's code base.

	* netax25.c, interface.c, aprx.h:
	    Use Link-Level mechanism to send arbitrary AX.25 packets to
	    desired devices.  Added also a about once minute run code
	    that checks current AX.25 devices in the system, and maps
	    necessary ifindex:es to netdevices wanting to do IO.
	    And all parameters to 'netax25_sendto()' are const..

	* aprx.h, aprx.c, aprx-stat.c, aprsis.c, erlang.c, igate.c:
	    Commonly used strftime() got put into  printtime() function.

	* VERSION 1.94

	* interface.c: